Fix flickering signin bar on mouseover. Issue 21

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -70,7 +70,6 @@ span {
   margin-right: 5px;
   padding: 5px;
   color: white;
-  width: 14em;
 }
 
 .sign_in img {
